# something-normal

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
apps/ps-cli/: Cargo.toml
apps/ps-cli/src/: main.rs
apps/ps-gui/: Cargo.toml
apps/ps-runner/: Cargo.toml  build.rs
apps/ps-runner/src/: audio.rs  desktop.rs  main.rs  payload.rs  renderer.rs
compile/: build.py  debug_bin.py  download-video.py  helpers.py  requirements.txt  video-to-bin.py
crates/ps-core/: Cargo.toml
crates/ps-core/src/: lib.rs
crates/ps-factory/: Cargo.toml
crates/ps-factory/src/: builder.rs  converter.rs  debugger.rs  downloader.rs  lib.rs  runner.rs
src/: audio.rs  main.rs  window.rs
