[package]
name = "pixel_shell"
version = "1.0.0"
edition = "2021"

[features]
res_720p = []
res_1080p = []
res_1440p = []
res_2160p = []

[dependencies]
# Audio Engine (Optimized for size)
kira = { version = "0.8.7", default-features = false, features = ["cpal", "ogg"] }

# Windows API (Stripped to only necessary UI and Audio components)
[dependencies.windows]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Win32_System_LibraryLoader",
    "Win32_Media",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_System_Threading"
]

[build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
FileDescription = "Pixel Shell Overlay Service"
ProductName = "Pixel Shell"
CompanyName = "ShineeKun"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
