[package]
name = "ps-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
kira = { version = "0.8.7", default-features = false, features = ["cpal", "ogg"] }

ps-core = { path = "../../crates/ps-core"}

[dependencies.windows]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Media",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging"
]

[build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
Icon = "../../assets/pixel-shell.ico"
FileDescription = "Pixel Shell High-Performance Overlay Engine"
ProductName = "Pixel Shell"
CompanyName = "ShineeKun"
FileVersion = "1.0.0.0"
ProductVersion = "1.0.0.0"
LegalCopyright = "Copyright © 2025 ShineeKun. All Rights Reserved."
OriginalFilename = "runner.exe"
